fix(auth, project, workspace, task, test): Do the fixes to make it frontend compatible
