# backend/src/routes/auth.routes.js
@@ -1,12 +1,12 @@
 import { Router } from "express";
 import { register, login , getMe } from "../controllers/auth.controller.js";
-import { strictAuthRateLimiter } from "../middlewares/rate-limit.middleware.js";
+import { authRateLimiter, strictAuthRateLimiter } from "../middlewares/rate-limit.middleware.js";
 import { authMiddleware } from "../middlewares/auth.middleware.js";
 
 const router = Router();
 
 router.post("/register", strictAuthRateLimiter ,register);
 router.post("/login", strictAuthRateLimiter ,login);
-router.get("/me", strictAuthRateLimiter, authMiddleware , getMe);
+router.get("/me",authRateLimiter, authMiddleware , getMe);
 
 export default router;
