# backend/src/routes/task.routes.js
@@ -1,28 +1,63 @@
 import { Router } from "express";
 import {
-  create,
-  listByProject,
+  createTaskController,
+  deleteTaskController,
+  getAllTasksController,
+  getTaskByIdController,
+  updateTaskController,
 } from "../controllers/task.controller.js";
+
 import { authMiddleware } from "../middlewares/auth.middleware.js";
 import { rbac } from "../middlewares/rbac.middleware.js";
 import { Permissions } from "../enums/role.enum.js";
 
-const router = Router();
+const taskRoutes = Router();
 
-router.use(authMiddleware);
+taskRoutes.use(authMiddleware);
 
-// Create task
-router.post(
-  "/",
+/**
+ * CREATE TASK
+ */
+taskRoutes.post(
+  "/project/:projectId/workspace/:workspaceId/create",
   rbac([Permissions.CREATE_TASK]),
-  create
+  createTaskController
 );
 
-// List tasks by project
-router.get(
-  "/:projectId",
+/**
+ * UPDATE TASK
+ */
+taskRoutes.put(
+  "/:id/project/:projectId/workspace/:workspaceId/update",
+  rbac([Permissions.EDIT_TASK]),
+  updateTaskController
+);
+
+/**
+ * DELETE TASK
+ */
+taskRoutes.delete(
+  "/:id/workspace/:workspaceId/delete",
+  rbac([Permissions.DELETE_TASK]),
+  deleteTaskController
+);
+
+/**
+ * GET ALL TASKS IN WORKSPACE
+ */
+taskRoutes.get(
+  "/workspace/:workspaceId/all",
   rbac([Permissions.VIEW_ONLY]),
-  listByProject
+  getAllTasksController
 );
 
-export default router;
+/**
+ * GET TASK BY ID
+ */
+taskRoutes.get(
+  "/:id/project/:projectId/workspace/:workspaceId",
+  rbac([Permissions.VIEW_ONLY]),
+  getTaskByIdController
+);
+
+export default taskRoutes;
